cut fat; still very long

--- a/writing/spp/generics-spp.bib
+++ b/writing/spp/generics-spp.bib
@@ -28,6 +28,21 @@
   year = {2005}
 }
 
+@article{Cimpian2008,
+abstract = {Sentences that refer to categories - generic sentences (e.g., "Dogs are friendly") - are frequent in speech addressed to young children and constitute an important means of knowledge transmission. However, detecting generic meaning may be challenging for young children, since it requires attention to a multitude of morphosyntactic, semantic, and pragmatic cues. The first three experiments tested whether 3- and 4-year-olds use (a) the immediate linguistic context, (b) their previous knowledge, and (c) the social context to determine whether an utterance with ambiguous scope (e.g., "They are afraid of mice", spoken while pointing to 2 birds) is generic. Four-year-olds were able to take advantage of all the cues provided, but 3-year-olds were sensitive only to the first two. In Experiment 4, we tested the relative strength of linguistic-context cues and previous-knowledge cues by putting them in conflict; in this task, 4-year-olds, but not 3-year-olds, preferred to base their interpretations on the explicit noun phrase cues from the linguistic context. These studies indicate that, from early on, children can use contextual and semantic information to construe sentences as generic, thus taking advantage of the category knowledge conveyed in these sentences. ?? 2007 Elsevier B.V. All rights reserved.},
+author = {Cimpian, Andrei and Markman, Ellen M.},
+doi = {10.1016/j.cognition.2007.07.008},
+file = {:Users/mht/Documents/Mendeley Desktop/Cimpian, Markman/2008/Cimpian, Markman - 2008 - Preschool children's use of cues to generic meaning.pdf:pdf},
+isbn = {0010-0277},
+issn = {00100277},
+journal = {Cognition},
+keywords = {Conceptual development,Generics,Language development,Pronoun comprehension},
+pages = {19--53},
+pmid = {17765216},
+title = {{Preschool children's use of cues to generic meaning}},
+volume = {107},
+year = {2008}
+}
 
 @book{Clark1996,
   author    = {Clark, Herb H.}, 
@@ -66,6 +81,17 @@
   note = {Accessed: 2015-12-30}
 }
 
+
+@article{Frank2012, 
+  author = {Frank, Michael C and Goodman, Noah D}, 
+  journal = {Science}, 
+  number = {6084}, 
+  publisher = {American Association for the Advancement of Science}, 
+  title = {Predicting pragmatic reasoning in language games}, 
+  volume = {336}, 
+  year = {2012} 
+}
+
 @article{Gelman1999,
   author = {Gelman, Susan A. and Heyman, Gail D.},
   issn = {0956-7976},
@@ -101,6 +127,14 @@ title = {{Generic Language in Parent-Child Conversations}},
 volume = {4},
 year = {2008}
 }
+
+@article{Goodman2013, 
+  author = {Goodman, N. D. and Stuhlm{\"u}ller, A.}, 
+  journal = {Topics in Cognitive Science}, 
+  title = {Knowledge and implicature: Modeling language understanding as social cognition}, 
+  year = {2013} 
+},
+
 
 @inbook{Goodman2015a, 
   author = {Goodman, Noah D. and Lassiter, Daniel}, 
